improvement: wider File Format support + Status overflow fix Dozens of additional files should now transfer more smoothly through Vector - SVGs are now previewed as actual images - and your custom Status will no longer overflow out-of-bounds in the Chat tab.

--- a/src/styles.css
+++ b/src/styles.css
@@ -515,8 +515,6 @@ body {
 }
 
 .account .status {
-  width: fit-content;
-  font-size: smaller;
   margin: 0;
   margin-top: 5px;
   margin-left: auto;
